Make minor slide adjusments

--- a/slides.html
+++ b/slides.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <title>reveal.js</title>
+        <title>Creating Native Modules For Node.js</title>
 
         <link rel="stylesheet" href="node_modules/reveal.js/css/reveal.css">
         <link rel="stylesheet" href="node_modules/reveal.js/css/theme/black.css">
@@ -48,7 +48,7 @@
                     <p>
                         <ul>
                             <li>Provide an execution environment for JS code</li>
-                            <li>Built in lower-level languages such as C/C++</li>
+                            <li>Normally built with lower-level languages (e.g. C++)</li>
                             <li>Many variations are available today</li>
                         </ul>
                     </p>
@@ -147,10 +147,9 @@
         <script src="node_modules/reveal.js/js/reveal.js"></script>
 
         <script>
-            // More info https://github.com/hakimel/reveal.js#configuration
             Reveal.initialize({
                 history: true,
-                // More info https://github.com/hakimel/reveal.js#dependencies
+                width: 1280,
                 dependencies: [
                     { src: 'node_modules/reveal.js/plugin/markdown/marked.js' },
                     { src: 'node_modules/reveal.js/plugin/markdown/markdown.js' },
