Update slides for lesson 3

--- a/slides.html
+++ b/slides.html
@@ -35,6 +35,10 @@
                 padding-bottom: 20px !important;
                 text-transform: none !important;
             }
+
+            .white-background {
+                background-color: #ffffff !important;
+            }
         </style>
     </head>
     <body>
@@ -139,6 +143,31 @@
                             > 20 + 30 + 100 + 500 = 650
                         </code>
                     </pre>
+                </section>
+                <section>
+                    <h2>Here Enters the Dino</h2>
+                    <p>
+                        <img src="images/libuv-logo.png" class="white-background" />
+                    </p>
+                </section>
+                <section>
+                    <h2>What Is libuv?</h2>
+                    <p>
+                        <ul>
+                            <li>A C library for handling event loops</li>
+                            <li>Used by Node.js for concurrent operations</li>
+                        </ul>
+                    </p>
+                </section>
+                <section>
+                    <h2>Example 3 - Callbacks and Async</h2>
+                    <p>
+                        <ul>
+                            <li><a href="examples/lesson02-argument-passing/argpassing.cpp">Module C++</a></li>
+                            <li><a href="examples/lesson02-argument-passing/binding.gyp">GYP Build Definition</a></li>
+                            <li><a href="examples/lesson02-argument-passing/test.js">JavaScript Test Code</a></li>
+                        </ul>
+                    </p>
                 </section>
             </div>
         </div>
