--- a/slides.html
+++ b/slides.html
@@ -163,7 +163,7 @@
                     <h2>What Is libuv?</h2>
                     <p>
                         <ul>
-                            <li>A C library for handling event loops</li>
+                            <li>A C library for handling event loops and async I/O</li>
                             <li>Used by Node.js for concurrent operations</li>
                         </ul>
                     </p>
@@ -208,8 +208,8 @@
                     <p>
                         <ul>
                             <li>Allows JS code to connect with lower-level APIs</li>
-                            <li>Enables briding JS with legacy native applications</li>
                             <li>Facilitates writing speed-critical code for Node to consume</li>
+                            <li>You can learn to contribute to the Node.js source code</li>
                         </ul>
                     </p>
                 </section>
